--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
         of building full application websites. I am working to add my own spin with 3D<br />
         art and eye for good design. 👨🏾‍💻🐉
         </p>
+
+        <h3 class="list-title">Skill Stack:</h3>
+        <ul class="list-item">
+            <li>Three.js</li>
+            <li>JavaScript</li>
+            <li>CSS3</li>
+            <li>HTML5</li>
+        </ul>
     </main>
 
 
