--- a/pages/contact-page.html
+++ b/pages/contact-page.html
@@ -14,8 +14,8 @@
             <a href="contact-page.html">Contact</a>
         </nav>
 
-        <header>
-            <h1>Contact</h1>
+        <header class="title-head-container">
+            <h2><em>To  be Updated</em></h1>
         </header>
         
     </main>
