--- a/pages/portfolio-page.html
+++ b/pages/portfolio-page.html
@@ -15,8 +15,8 @@
             <a href="contact-page.html">Contact</a>
         </nav>
 
-        <header>
-            <h1>Portfolio</h1>
+        <header class="title-head-container">
+            <h2>Portfolio</h1>
         </header>
         
     </main>
